# thirty-grand

./: .gitignore  README.md  pyproject.toml
src/tests/: test_observation.py
src/tests-integration/: test-display-yearly-observation-barchart.py  test-fetch-image.py  test-get-image.py  test-print-class-table.py  test-print-distinct-species-in-class-table.py  test-print-family-table-with-order-filter.py  test-print-family-table.py  test-print-observations-for-species-table.py  test-print-observations-table-with-random-sample.py  test-print-observations-table.py  test-print-order-table.py  test-yard-coleoptera-family-table.py  test-yard-diptera-family-table.py  test-yard-lepidoptera-family-table.py
src/tests/formatting/: test_format_taxon_name.py
src/tests/queries/: test__name_matches.py  test_get_observations_table.py
src/tests/tables/: test_is_probable_species.py
src/tests/utilities/: test_extract_yearly_observation_counts.py
src/thirty_grand/: observation.py
src/thirty_grand/queries/: __init__.py
src/thirty_grand/utilities/: __init__.py
src/thirty_grand/utilities/csv/: __init__.py
tests-integration/: test-display-early-observation-barchart.py  test-display-yearly-observation-barchart.py  test-print-class-table.py  test-print-family-table-with-order-filter.py  test-print-family-table.py  test-print-observations-table-with-random-sample.py  test-print-observations-table.py  test-print-order-table.py  test-yard-coleoptera-family-table.py  test-yard-diptera-family-table.py  test-yard-lepidoptera-family-table.py
tests/thirty_grand/: test_observation.py
(+8 files in other folders)
