[tool.poetry]
name = "thirty-grand"
version = "0.1.0"
description = "tools for my 30,000 wildlife obervations"
authors = ["Mark Nenadov <marknenadov@gmail.com>"]
license = "LGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prettytable = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
